--- a/public/index.html
+++ b/public/index.html
@@ -86,9 +86,11 @@
         <button type="button" id="adding-job">add</button>
         <button type="button" id="edit-cancel">cancel</button>
       </form>
-      
+    </div>
+    <!-- Закрываем тег div -->
+    </div>
 
-      <script src="./index.js" type="module"></script>
+    <script src="./index.js" type="module"></script>
 
   </body>
 </html>
