--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <!-- <meta http-equiv="Content-Security-Policy" content="script-src 'self' http://localhost:3000;"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./index.css" />
     <title>Jobs List</title>
   </head>
 
   <body>
-    <h1>Jobs List</h1>
+    <h1>Jobs List!!!!</h1>
     <hr />
     <p id="message"></p>
     <hr />
@@ -92,6 +93,6 @@
         <button type="button" id="edit-cancel">cancel</button>
       </form>
     </div>
-    <script src="./index.js" type="module"></script>
+    <script src="index.js" type="module"></script>
   </body>
 </html>
